fix: table alignment on other language (#789)

--- a/src/sass/_common/reskin.scss
+++ b/src/sass/_common/reskin.scss
@@ -330,6 +330,7 @@ div#contract-injection-container {
                         flex-direction: column;
                         width: 100%;
                         align-items: center;
+                        justify-content: space-between;
                     }
                 }
                 .info-box {
